Fix: snapshot loading, overlapping images in RELATED PATTERNS card

--- a/_sass/catalog.scss
+++ b/_sass/catalog.scss
@@ -123,7 +123,7 @@
     flex-wrap: wrap;
     flex: 0 0 75%;
     gap: 1rem;
-    justify-content: space-around;
+    justify-content: space-evenly;
     height: fit-content;
     padding-top: 1rem;
   }
@@ -290,6 +290,7 @@ p {
   justify-content: center;
 }
 .pattern-image {
+  margin-top: 24px;
   width: 60%;
   object-fit: contain;
   position: absolute;
@@ -540,8 +541,8 @@ input[type="checkbox"] {
   padding-right: 2px;
 }
 .modal-pattern-image {
-  width: 55%;
-  margin-left: 11%;
+  width: 50%;
+  // margin-left: 11%;
   object-fit: contain;
   position: absolute;
   border-radius: 15px;
@@ -554,7 +555,7 @@ input[type="checkbox"] {
 	bottom: 0;
 	font-size: 8px;
 	right: 0;
-	margin: 0px 62px 4px 0px;
+	margin: 0px 62px 6px 0px;
 }
 
 .modal-container {
@@ -822,22 +823,22 @@ label {
     padding-right: 2px;
   }
   .modal-pattern-image {
-    width: 55%;
+    width: 40%;
 
     object-fit: contain;
     position: absolute;
-    margin-left: 5%;
+    // margin-left: 5%;
     border-radius: 15px;
     padding-bottom: 2px;
   }
-  .modal-pattern-id {
-    position: absolute;
-    bottom: 0;
-    font-size: 8px;
-    right: 0;
-    padding-top: 10px;
-    margin-right: 14px;
-  }
+  // .modal-pattern-id {
+  //   position: absolute;
+  //   bottom: 0;
+  //   font-size: 8px;
+  //   right: 0;
+  //   padding-top: 10px;
+  //   margin-right: 14px;
+  // }
   .modal-container {
     padding: 20px 40px 40px;
     max-width: 600px;
@@ -999,6 +1000,7 @@ label {
     .row {
       display: flex;
       // flex-direction: column;
+      gap: 1.75rem;
       align-items: center;
       justify-content: center;
       width: 100%;
